06-traefik-route.yaml
# Traefik uses a custom rulebook called an IngressRoute instead of standard Ingress rules.
# This rule tells Traefik: "If traffic hits thechamp.app, send it to myapp-svc!"
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: myapp-route
  # This must be in the same namespace as your Python app
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`thechamp.app`)
      kind: Rule
      services:
        - name: myapp-svc
          port: 80
