07-nginx-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-nginx-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /nginx

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`thechamp.app`) && PathPrefix(`/nginx`)
      kind: Rule
      middlewares:
        - name: strip-nginx-prefix
      services:
        - name: nginx-svc
          port: 80
