ingress_check_utf8.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:990151164914:certificate/506b21f2-6a5d-4d7a-9b00-02886af4cf39
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/success-codes: 200,404
    alb.ingress.kubernetes.io/target-type: ip
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/certificate-arn":"arn:aws:acm:eu-north-1:990151164914:certificate/506b21f2-6a5d-4d7a-9b00-02886af4cf39","alb.ingress.kubernetes.io/listen-ports":"[{\"HTTP\": 80}, {\"HTTPS\":443}]","alb.ingress.kubernetes.io/scheme":"internet-facing","alb.ingress.kubernetes.io/ssl-redirect":"443","alb.ingress.kubernetes.io/success-codes":"200,404","alb.ingress.kubernetes.io/target-type":"ip","kuberne [...]
    kubernetes.io/ingress.class: alb
  creationTimestamp: "2026-07-03T10:55:35Z"
  finalizers:
  - ingress.k8s.aws/resources
  generation: 2
  name: alb-ingress
  namespace: traefik
  resourceVersion: "1566518"
  uid: 6b67e0b1-ef82-4d05-8821-ece5fa8adb6a
spec:
  rules:
  - host: thechamp.app
    http:
      paths:
      - backend:
          service:
            name: traefik
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: '*.thechamp.app'
    http:
      paths:
      - backend:
          service:
            name: traefik
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: k8s-traefik-albingre-031547a128-113693394.eu-north-1.elb.amazonaws.com
      ports:
      - port: 80
        protocol: ""
      - port: 443
        protocol: ""
